src/objects/MiniTemplateTax__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Sales_Organization__c</fullName>
        <label>Sales Organization</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Country__c</fullName>
        <label>Tax Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_category__c</fullName>
        <label>Tax category</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_classification__c</fullName>
        <label>Tax classification</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Mini Template Tax</label>
</CustomObject>